--- a/index.html
+++ b/index.html
@@ -12,55 +12,55 @@
     <div class="logo">Header Logo</div>
    
     <ul>
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
+        <li>Shop</li>
+        <li>About Us</li>
+        <li>Contact</li>
     </ul>
 </div>
 <div class="one-mid">
     <div class="one-left">
-    <h1>This Website is Awesome!</h1>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+    <h1>The Perfect T-Shirt for all!</h1>
+    <p>Introducing the all-new tshirt subscription service! Take your measurements once and receive a new shirt every month. Sign-up below!</p>
     <button>Sign up</button>
     </div>
-    <div class="placeholder">This is a placeholder for an image </div>
+    <img src="images/headerimage.jpg">
     </div>
 </div>
 
     <div class="section-two">
-        <h2>Some Random Information</h2>
+        <h2>Our Process</h2>
         <div class="content">
         <div class="section">
-            <div class="box"> </div>
-            <div class="box-text">this is some subtext under an illustration or image </div>
+            <div class="box"> <img src="images/choose.jpg"> </div>
+            <div class="box-text">Choose item </div>
         </div>
         <div class="section">
-            <div class="box"> </div>
-            <div class="box-text">this is some subtext under an illustration or image </div>
+            <div class="box"> <img src="images/measure.jpg"> </div>
+            <div class="box-text">Measure </div>
         </div>
         <div class="section">
-            <div class="box"> </div>
-            <div class="box-text">this is some subtext under an illustration or image </div>
+            <div class="box"> <img src="images/place-order.jpg"> </div>
+            <div class="box-text">Place Order </div>
         </div>
         <div class="section">
-            <div class="box"> </div>
-            <div class="box-text">this is some subtext under an illustration or image </div>
+            <div class="box"> <img src="images/tshirt.jpg"> </div>
+            <div class="box-text">Enjoy your custom shirt</div>
         </div>
         </div>
     </div>
 
     <div class="section-three">
         <div class="quote-box">
-        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div class="author">-Thor, God of Thunder</div>
+        <div class="quote">Remind yourself. Nobody built like you, you design yourself.</div>
+        <div class="author">-Jay-Z</div>
         </div>
     </div>
 
     <div class="section-four">
         <div class="container">
             <div class="left">
-            <h3>Call to action! It's time!</h3>
-            <div>Sign up for our product by clicking that button right over there!</div>
+            <h3>Sign up for our monthly subscription and save!</h3>
+            <div>Signing up for our monthly subscription saves you 20% on each individual shirt. What are you waiting for?</div>
             </div>
             <button class="four">Sign up</button>
         </div>
